<resources>
    <string name="app_name">Countries</string>
    <string name="main_title"><u>Countries of the World</u></string>
    <string name="btn_open_browseCountriesActivity">BROWSE COUNTRIES</string>
    <string name="iv_flag_content_description">Flag of the country</string>
    <string name="label_tv_capital">Capital</string>
    <string name="label_tv_region">Region</string>
    <string name="label_tv_population">Population</string>
    <string name="label_tv_nativeName">Native name</string>
    <string name="label_tv_currencies">Currencies</string>
    <string name="button_quiz">TAKE A QUIZ</string>
    <string name="search_menu_title">Search</string>
    <string name="browse_title">Browse Countries</string>
    <string name="select_regions">Select Regions for Capital Quiz</string>

    <string name="region_africa">Africa</string>
    <string name="region_americas">Americas</string>
    <string name="region_asia">Asia</string>
    <string name="region_europe">Europe</string>
    <string name="region_oceania">Oceania</string>
    <string name="btn_start">START</string>


    <string name="tw_question_body">What is the capital of:</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_retry">Retry</string>
    <string name="bttn_menu">Menu</string>
    <string name="btn_view_location_on_maps">View location on maps</string>
    <string name="menu_title">Menu</string>
    <string name="action_quiz">QUIZ</string>
    <string name="action_update">UPDATE</string>
    <string name="btn_no">NO</string>
    <string name="btn_yes">YES</string>
</resources>