<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/iv_flag_content_description"
    tools:context=".ViewCountryActivity"
    android:layout_margin="16dp">





    <ImageView
        android:id="@+id/iv_flag"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/iv_flag_content_description"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_nativeName"
        android:text="@string/label_tv_nativeName"
        android:textSize="18sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_nativeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        tools:text="Native name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_region"
        android:text="@string/label_tv_region"
        android:textSize="18sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        tools:text="Region, subregion" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_capital"
        android:text="@string/label_tv_capital"
        android:textSize="18sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        tools:text="CapitalName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_population"
        android:text="@string/label_tv_population"
        android:textSize="18sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_population"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        tools:text="Population" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tv_population"
        android:text="@string/label_tv_currencies"
        android:textSize="18sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_currencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        tools:text="Currency_1\nCurrency_2" />




</LinearLayout>

</ScrollView>




